--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -160,6 +160,7 @@
                                     </div>
                                 </nav>
                             </div>
+                          <script type='text/javascript' src='//pl24223346.cpmrevenuegate.com/e2/d8/d2/e2d8d22bb64392d227d2bfa586c291bc.js'></script>
                             <nav id="tg-nav" class="tg-nav brand-center">
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#tg-navigationm-mobile">
