--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -141,6 +141,16 @@
                                                 </ul>
                                             </nav>
                                         </div>
+                                      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-1987564699076912"
+     data-ad-slot="3927554256"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                                         <div class="tg-colhalf">
                                             <ul class="tg-socialicons">
                                                 <li>
