--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -962,7 +962,7 @@
                                           
                                             <li>
                                                 <i class="fa fa-phone"></i>
-                                                <a>+96170171891</a>
+                                                <a href="https://wa.me/qr/K56ZFQ5DJQTNI1">+96170171891</a>
                                             </li>
                                         </ul>
                                         
