--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,6 +42,18 @@
                         </li>
                     </ul>
                 </div>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
+<!-- by one -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1987564699076912"
+     data-ad-slot="2339924234"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 <div class="tg-colhalf">
                     <ul>
                         <li class="menu-item-has-children">
